repair booking mobile links spacing

--- a/resources/booking.css
+++ b/resources/booking.css
@@ -46,7 +46,7 @@
 	#m-booking-section ul {
 		color: #0a1529;
 		width: 70vw;
-		padding-left: 40vw;
+		padding-left: 30vw;
 		text-align: left;
 	}
 	/* AMENITIES */
